[gd_scene load_steps=25 format=3 uid="uid://dddu2enxrq217"]

[ext_resource type="Texture2D" uid="uid://bytq52mqwllp0" path="res://addons/kenney_prototype_textures/light/texture_06.png" id="1_bjd11"]
[ext_resource type="Script" uid="uid://bni2ha4odumw1" path="res://scripts/GameManager.gd" id="1_elqb8"]
[ext_resource type="Texture2D" uid="uid://dsrhbxtwn354m" path="res://addons/kenney_prototype_textures/dark/texture_09.png" id="2_qmy6f"]
[ext_resource type="Script" uid="uid://b1rfndp28srso" path="res://scripts/MissionDisplay.gd" id="2_rvslj"]
[ext_resource type="Script" uid="uid://cgip43em6p0ct" path="res://scripts/BaseStation.gd" id="3_mwfav"]
[ext_resource type="Script" uid="uid://dfr8exlb2wnab" path="res://scripts/HelpPanel.gd" id="3_rarhs"]
[ext_resource type="Script" uid="uid://c5qkm8y7ol158" path="res://scripts/GameUI.gd" id="4_qmy6f"]
[ext_resource type="Script" uid="uid://br6mdodag811c" path="res://scripts/DeploymentPanel.gd" id="5_cvmbd"]
[ext_resource type="Script" uid="uid://cy2aa8pp8r5ib" path="res://scripts/UpgradePanel.gd" id="6_ft6cd"]
[ext_resource type="Script" uid="uid://bdytgf5bt2ywv" path="res://scripts/Compass.gd" id="6_mwfav"]
[ext_resource type="Texture2D" uid="uid://cxa75dbsddirm" path="res://assets/crosshair-texture.svg" id="7_3p2gp"]
[ext_resource type="Script" uid="uid://c1618xp4ub86w" path="res://scripts/PauseMenu.gd" id="9_bb450"]
[ext_resource type="Script" uid="uid://xtwshxmxceg8" path="res://scripts/CargoSlotsUI.gd" id="10_nfivy"]
[ext_resource type="Script" uid="uid://yojbnr5eybm2" path="res://scripts/ProgressIndicator.gd" id="11_1nqs0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nb6ul"]
size = Vector3(500, 1, 500)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nmpkt"]
albedo_color = Color(0.407798, 0.21956, 0.0422809, 1)
albedo_texture = ExtResource("1_bjd11")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_bundf"]
material = SubResource("StandardMaterial3D_nmpkt")
size = Vector3(500, 1, 500)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vdbl1"]
albedo_texture = ExtResource("2_qmy6f")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sxtbx"]
albedo_texture = ExtResource("2_qmy6f")
uv1_triplanar = true

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_47r4r"]
sky_top_color = Color(0.529412, 0.454902, 0.341176, 1)

[sub_resource type="Sky" id="Sky_eronj"]
sky_material = SubResource("ProceduralSkyMaterial_47r4r")

[sub_resource type="Environment" id="Environment_oqiic"]
background_mode = 2
sky = SubResource("Sky_eronj")

[sub_resource type="CylinderMesh" id="CylinderMesh_sxtbx"]
top_radius = 10.0
bottom_radius = 10.0
height = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_47r4r"]
height = 0.2
radius = 10.0

[node name="Main" type="Node3D"]

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="Environment"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Ground"]
shape = SubResource("BoxShape3D_nb6ul")

[node name="Mesh" type="MeshInstance3D" parent="Environment/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_bundf")
skeleton = NodePath("../..")

[node name="Props" type="Node" parent="Environment"]

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/Props"]
transform = Transform3D(0.752745, 0.380731, -0.537046, -0.309936, 0.924686, 0.221124, 0.580788, 0, 0.814055, 2.55776, -0.195552, -25.5013)
use_collision = true
size = Vector3(5.39307, 3.54272, 4.96484)
material = SubResource("StandardMaterial3D_vdbl1")

[node name="CSGBox3D2" type="CSGBox3D" parent="Environment/Props"]
transform = Transform3D(0.811728, -0.0755531, -0.579128, 0.0615043, 0.997142, -0.0438803, 0.580788, 1.13467e-08, 0.814055, 62.3295, 0.558208, -3.69028)
use_collision = true
size = Vector3(8.01831, 3.54272, 9.20253)
material = SubResource("StandardMaterial3D_vdbl1")

[node name="CSGBox3D3" type="CSGBox3D" parent="Environment/Props"]
transform = Transform3D(-0.542578, -0.36301, 0.757518, -0.309936, 0.924686, 0.221124, -0.780736, -0.114805, -0.614224, 46.9756, 2.4827, 33.8663)
use_collision = true
size = Vector3(5.39307, 13.8285, 4.96484)
material = SubResource("StandardMaterial3D_vdbl1")

[node name="CSGBox3D4" type="CSGBox3D" parent="Environment/Props"]
transform = Transform3D(0.752745, 0.380731, -0.537046, -0.309936, 0.924686, 0.221124, 0.580788, 0, 0.814055, -28.0999, -0.499607, 36.4246)
use_collision = true
size = Vector3(15.8913, 3.54272, 11.9531)
material = SubResource("StandardMaterial3D_vdbl1")

[node name="CSGBox3D5" type="CSGBox3D" parent="Environment/Props"]
transform = Transform3D(-0.532679, 0.0237604, -0.845984, -0.742362, 0.466877, 0.480546, 0.406388, 0.884003, -0.231057, -34.6167, -0.765467, -4.17903)
use_collision = true
size = Vector3(5.39307, 3.54272, 2.5929)
material = SubResource("StandardMaterial3D_vdbl1")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Environment/Props"]
transform = Transform3D(1, 0, 0, 0, 0.877799, -0.479029, 0, 0.479029, 0.877799, -14, 0, -20)
use_collision = true
radius = 3.0
material = SubResource("StandardMaterial3D_sxtbx")

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="Environment/Props"]
transform = Transform3D(0.0806686, 0.996741, 0, -0.996741, 0.0806686, 0, 0, 0, 1, 37.5967, -0.569053, -20)
use_collision = true
radius = 3.0
height = 16.1084
material = SubResource("StandardMaterial3D_sxtbx")

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="Environment/Props"]
transform = Transform3D(-0.0155236, -0.191809, -0.981309, -0.996741, 0.0806686, 0, 0.0791609, 0.978111, -0.192436, 18.6302, 0, 56.3641)
use_collision = true
radius = 5.4126
material = SubResource("StandardMaterial3D_sxtbx")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.60873, 0.53836, -0.582767, -0.182749, 0.809933, 0.557325, 0.772043, -0.23276, 0.591415, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_oqiic")

[node name="ResourceSpawnPoints" type="Node3D" parent="Environment"]

[node name="ResourceSpawnPoint1" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.4404, 2.0431, -45.1075)

[node name="ResourceSpawnPoint2" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.1736, 2.0431, -80.7434)

[node name="ResourceSpawnPoint3" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.0893, 2.0431, -31.3848)

[node name="ResourceSpawnPoint4" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 89.9772, 2.0431, -31.3848)

[node name="ResourceSpawnPoint5" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 63.3083, 2.0431, 16.1244)

[node name="ResourceSpawnPoint6" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 33.9736, 1.81404, 44.2222)

[node name="ResourceSpawnPoint7" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.16659, 1.43474, 44.2222)

[node name="ResourceSpawnPoint8" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -63.8062, -1.72178, 44.2222)

[node name="ResourceSpawnPoint9" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -74.7932, -1.72178, -0.408974)

[node name="ResourceSpawnPoint10" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -55.48, -1.72178, -57.8809)

[node name="ResourceSpawnPoint11" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.3286, -1.72178, -91.1688)

[node name="ResourceSpawnPoint12" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -96.0433, -1.72178, -57.1434)

[node name="ResourceSpawnPoint13" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.0422, -1.72178, -28.4927)

[node name="ResourceSpawnPoint14" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -46.5858, -1.72178, 7.59895)

[node name="ResourceSpawnPoint15" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.1941, -1.72178, 45.6303)

[node name="ResourceSpawnPoint16" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.9874, -1.72178, 43.2046)

[node name="ResourceSpawnPoint17" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 263.757, -237.253, 43.2046)

[node name="ResourceSpawnPoint18" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 308.366, -237.253, -152.392)

[node name="ResourceSpawnPoint19" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 58.1487, -237.253, -310.549)

[node name="ResourceSpawnPoint20" type="Node3D" parent="Environment/ResourceSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -725.7, -237.253, -338.032)

[node name="BaseStation" type="StaticBody3D" parent="."]
script = ExtResource("3_mwfav")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseStation"]
mesh = SubResource("CylinderMesh_sxtbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BaseStation"]
shape = SubResource("CylinderShape3D_47r4r")

[node name="Resources" type="Node3D" parent="."]

[node name="DroneSpawnPoints" type="Node3D" parent="."]

[node name="AerialSpawnPoint" type="Node3D" parent="DroneSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, 0)

[node name="GroundSpawnPoint" type="Node3D" parent="DroneSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2, 0)

[node name="ActiveDrones" type="Node3D" parent="."]

[node name="Waypoints" type="Node3D" parent="."]

[node name="GameUI" type="CanvasLayer" parent="."]
script = ExtResource("4_qmy6f")

[node name="MissionInfo" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 25.0
offset_right = 60.0
offset_bottom = 65.0
script = ExtResource("2_rvslj")

[node name="MissionNumberLabel" type="Label" parent="GameUI/MissionInfo"]
offset_right = 40.0
offset_bottom = 23.0
text = "Current Mission: 1"

[node name="ResourcesCollectedLabel" type="Label" parent="GameUI/MissionInfo"]
offset_top = 21.0
offset_right = 173.0
offset_bottom = 44.0
text = "Resources Collected: 0"

[node name="MissionsCompletedLabel" type="Label" parent="GameUI/MissionInfo"]
offset_top = 43.0
offset_right = 174.0
offset_bottom = 66.0
text = "MIssions Completed: 0"

[node name="StatusLabel" type="Label" parent="GameUI/MissionInfo"]
layout_mode = 0
offset_left = 3.0
offset_top = -19.0
offset_right = 43.0
offset_bottom = 4.0

[node name="Compass" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("6_mwfav")

[node name="HelpToggle" type="Button" parent="GameUI"]
offset_left = 21.0
offset_top = 101.0
offset_right = 116.0
offset_bottom = 132.0
text = "HelpToggle"

[node name="Crosshair" type="TextureRect" parent="GameUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_3p2gp")

[node name="ResourceInfoLabel" type="Label" parent="GameUI"]
offset_left = 556.0
offset_top = 384.0
offset_right = 596.0
offset_bottom = 407.0
horizontal_alignment = 1

[node name="BatteryBar" type="ProgressBar" parent="GameUI"]
offset_left = 27.0
offset_top = 530.0
offset_right = 31.0
offset_bottom = 557.0
show_percentage = false

[node name="CargoUI" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1128.0
offset_top = 530.0
offset_right = -1088.0
offset_bottom = 570.0
grow_horizontal = 0
script = ExtResource("10_nfivy")

[node name="ProgressIndicator" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_1nqs0")

[node name="DeploymentPanel" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("5_cvmbd")

[node name="AerialDroneButton" type="Button" parent="GameUI/DeploymentPanel"]
offset_left = -54.0
offset_right = -1.0
offset_bottom = 31.0
text = "Aerial"

[node name="GroundDroneButton" type="Button" parent="GameUI/DeploymentPanel"]
offset_right = 8.0
offset_bottom = 8.0
text = "Ground"

[node name="StatusLabel" type="Label" parent="GameUI/DeploymentPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -29.0
offset_right = 25.0
offset_bottom = -6.0
grow_horizontal = 2
text = "Status"
horizontal_alignment = 1

[node name="UpgradePanel" type="Control" parent="GameUI"]
visible = false
custom_minimum_size = Vector2(800, 600)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_ft6cd")

[node name="AerialUpgrades" type="Control" parent="GameUI/UpgradePanel"]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0

[node name="BatteryButton" type="Button" parent="GameUI/UpgradePanel/AerialUpgrades"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Battery"

[node name="ScanButton" type="Button" parent="GameUI/UpgradePanel/AerialUpgrades"]
layout_mode = 0
offset_top = 35.0
offset_right = 45.0
offset_bottom = 66.0
text = "Scan"

[node name="SpeedButton" type="Button" parent="GameUI/UpgradePanel/AerialUpgrades"]
layout_mode = 0
offset_top = 71.0
offset_right = 56.0
offset_bottom = 102.0
text = "Speed"

[node name="GroundUpgrades" type="Control" parent="GameUI/UpgradePanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -60.0
offset_bottom = 60.0
grow_horizontal = 0

[node name="CargoButton" type="Button" parent="GameUI/UpgradePanel/GroundUpgrades"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Cargo"

[node name="SpeedButton" type="Button" parent="GameUI/UpgradePanel/GroundUpgrades"]
layout_mode = 0
offset_top = 35.0
offset_right = 56.0
offset_bottom = 66.0
text = "Speed"

[node name="TerrainButton" type="Button" parent="GameUI/UpgradePanel/GroundUpgrades"]
layout_mode = 0
offset_left = 1.0
offset_top = 68.0
offset_right = 65.0
offset_bottom = 99.0
text = "Terrain"

[node name="HelpPanel" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -555.0
offset_top = -185.0
offset_right = -515.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_rarhs")

[node name="PauseMenu" type="Control" parent="GameUI"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_bb450")

[node name="BackgroundDimmer" type="ColorRect" parent="GameUI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.345098)

[node name="Panel" type="Panel" parent="GameUI/PauseMenu"]
custom_minimum_size = Vector2(300, 200)
offset_left = 426.0
offset_top = 224.0
offset_right = 726.0
offset_bottom = 424.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PauseTitle" type="Label" parent="GameUI/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="GameUI/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Resume Game"

[node name="QuitButton" type="Button" parent="GameUI/PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Quit Game"

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_elqb8")
metadata/resource_types = []
metadata/resource_weights = []
